se agrega nueva forma de recolectar informacion

--- a/index.html
+++ b/index.html
@@ -12,46 +12,22 @@
 </head>
 <body class="container-fluid">
     <nav class="row fondo cubrir">
-        <form method="post" action="index.php" class="col-md-12 text-center pant-celu inmovilizar">
+        <form method="" action="" class="col-md-12 text-center pant-celu inmovilizar">
             <h2 class="letras texto-vertical">BOKU NO HERO</h2>
-            <button type="submit" name="elegido" value="shoto" class="btn btn-link"><img class="img-prota img" src="Imagenes/a.png" alt="shoto"></button>
-            <button type="submit" name="elegido" value="deku" class="btn btn-link"><img class="img-prota img" src="Imagenes/b.png" alt="deku"></button>
-            <button type="submit" name="elegido" value="allmight" class="btn btn-link"><img class="img-prota img" src="Imagenes/c.png" alt="allmight"></button>
-            <button type="submit" name="elegido" value="bakugo" class="btn btn-link"><img class="img-prota img" src="Imagenes/d.png" alt="bakugo"></button>
-            <button type="submit" name="elegido" value="redriot" class="btn btn-link"><img class="img-prota img" src="Imagenes/e.png" alt="redriot"></button>
+            <button type="submit" value="shoto" class="btn btn-link"><img class="img-prota img" src="Imagenes/a.png" alt="shoto"></button>
+            <button type="submit" value="deku" class="btn btn-link"><img class="img-prota img" src="Imagenes/b.png" alt="deku"></button>
+            <button type="submit" value="allmight" class="btn btn-link"><img class="img-prota img" src="Imagenes/c.png" alt="allmight"></button>
+            <button type="submit" value="bakugo" class="btn btn-link"><img class="img-prota img" src="Imagenes/d.png" alt="bakugo"></button>
+            <button type="submit" value="redriot" class="btn btn-link"><img class="img-prota img" src="Imagenes/e.png" alt="redriot"></button>
             <h2 class="letras texto-vertical">BOKU NO HERO</h2>
         </form>
     </nav>
 
-<?php  
-    if(isset($_POST['elegido'])){
-      session_start();
-      if($_POST['elegido'] == "deku"){
-        $_SESSION["elegido"] = "deku";
-        sleep(2);
-        header("Location: heroe.php");
-      }elseif($_POST['elegido'] == "bakugo"){
-        $_SESSION["elegido"] = "bakugo";
-        sleep(2);
-        header("Location: heroe.php");
-      }elseif($_POST['elegido'] == "shoto"){
-        $_SESSION["elegido"] = "shoto";
-        sleep(2);
-        header("Location: heroe.php");
-      }elseif($_POST['elegido'] == "redriot"){
-        $_SESSION["elegido"] = "redriot";
-        sleep(2);
-        header("Location: heroe.php");
-      }elseif($_POST['elegido'] == "allmight"){
-        $_SESSION["elegido"] = "allmight";
-        sleep(2);
-        header("Location: heroe.php");
-      }
-    }
-    ?>
+
 
     <script src="js/jquery.min.js"></script>
     <script src="js/js.js"></script>
+    <script src="js/ajax.js"></script>
 
 </body>
 </html>
