Ultimos cambios visuales

--- a/heroe.html
+++ b/heroe.html
@@ -24,7 +24,7 @@
             </a>
         </div>
         <div class="col-sm-12 col-lg-6">
-            <a class="nombre" href="#he" id="nombre">
+            <a class="cambiante nombre m-3" href="#he" id="nombre">
                 
             </a>
         </div>    
@@ -32,10 +32,10 @@
     <header class="text-center flotar">
         <a id="mini-menu" href="#"></a>
         <div class="barra-nav">
-            <a class="navegacion" href="#personality">Personalidad</a>
-            <a class="navegacion" href="#appearance">Apariencia</a>
-            <a class="navegacion" href="#skill">Habilidades</a>
-            <a class="navegacion" href="#equipment">Equipo</a>
+            <a class="cambiante navegacion" href="#personality">Personalidad</a>
+            <a class="cambiante navegacion" href="#appearance">Apariencia</a>
+            <a class="cambiante navegacion" href="#skill">Habilidades</a>
+            <a class="cambiante navegacion" href="#equipment">Equipo</a>
         </div>  
     </header>
     <main class="container">
