Arreglar responsive index

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <nav class="row fondo cubrir">
         <form method="" action="" class="col-md-12 text-center pant-celu inmovilizar">
             <h2 class="letras texto-vertical">BOKU NO HERO</h2>
-            <button type="submit" value="shoto" class="btn btn-link"><img class="img-prota img" src="Imagenes/a.png" alt="shoto"></button>
-            <button type="submit" value="deku" class="btn btn-link"><img class="img-prota img" src="Imagenes/b.png" alt="deku"></button>
-            <button type="submit" value="allmight" class="btn btn-link"><img class="img-prota img" src="Imagenes/c.png" alt="allmight"></button>
-            <button type="submit" value="bakugo" class="btn btn-link"><img class="img-prota img" src="Imagenes/d.png" alt="bakugo"></button>
-            <button type="submit" value="redriot" class="btn btn-link"><img class="img-prota img" src="Imagenes/e.png" alt="redriot"></button>
+            <button type="submit" value="shoto" class="btn btn-link btn-prota"><img class="img-prota img" src="Imagenes/a.png" alt="shoto"></button>
+            <button type="submit" value="deku" class="btn btn-link btn-prota"><img class="img-prota img" src="Imagenes/b.png" alt="deku"></button>
+            <button type="submit" value="allmight" class="btn btn-link btn-prota"><img class="img-prota img" src="Imagenes/c.png" alt="allmight"></button>
+            <button type="submit" value="bakugo" class="btn btn-link btn-prota"><img class="img-prota img" src="Imagenes/d.png" alt="bakugo"></button>
+            <button type="submit" value="redriot" class="btn btn-link btn-prota"><img class="img-prota img" src="Imagenes/e.png" alt="redriot"></button>
             <h2 class="letras texto-vertical">BOKU NO HERO</h2>
         </form>
     </nav>
